# robotica_pratica

install/: local_setup.sh  setup.sh
install/action_tutorials_cpp/lib/action_tutorials_cpp/: fibonacci_action_client  fibonacci_action_server
install/action_tutorials_cpp/share/action_tutorials_cpp/: local_setup.sh  package.sh
install/action_tutorials_interfaces/share/action_tutorials_interfaces/: local_setup.sh  package.sh
install/cpp_launch_example/share/cpp_launch_example/: local_setup.sh  package.sh
install/cpp_parameters/lib/cpp_parameters/: minimal_param_node
log/: latest_build
src/action_tutorials_cpp/: package.xml
src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
src/action_tutorials_interfaces/: CMakeLists.txt
src/cpp_launch_example/: CMakeLists.txt  package.xml
src/cpp_launch_example/launch/: my_script_launch.py
src/cpp_parameters/: CMakeLists.txt
src/cpp_parameters/src/: cpp_parameters_node.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/launch_tutorial/: setup.py
src/launch_tutorial/launch/: example_main.launch.py  example_substitutions.launch.py
src/more_interfaces/: CMakeLists.txt
src/more_interfaces/src/: publish_address_book.cpp
src/polygon_base/: CMakeLists.txt
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/: CMakeLists.txt
src/polygon_plugins/src/: polygon_plugins.cpp
(+28 files in other folders)
